<resources>
    <string name="app_name">QRKatalog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="settings_title">Settings</string>
    <string name="settings_text">Adjust how the filter should work</string>
    <string name="settings_matches_start">Allow matches on end of results</string>
    <string name="settings_matches_on_end_">Allow matches on beginning of results</string>
    <string name="data_list_company_text">Issuer</string>
    <string name="data_list_from_text">From</string>
    <string name="data_list_to_text">To</string>
    <string name="qr_data_intent_extra">qrdata</string>
    <string name="list_filter">LIST_FILTER</string>
    <string name="start_match">START_MATCH</string>
    <string name="end_match">END_MATCH</string>
    <string name="filter_text">filter</string>
    <string name="clear_filter_text">clear</string>
    <string-array name="FilterCategories">
        <item>Select a category</item>
        <item>Source</item>
        <item>Destination</item>
        <item>Company</item>
        <item>Earlier than</item>
        <item>Later than</item>
        <item>Between</item>
    </string-array>
</resources>
