<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        android:padding="10dp"
        android:layout_margin="5dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/data_list_holder"
            android:padding="@dimen/fab_margin"
            android:background="@color/colorAccent">
        <TextView
                android:text="RANDOM TIMESTAMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timestamp"
                android:textSize="20sp"/>
        <TextView
            android:text="@string/data_list_company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/companyText"
            android:textStyle="italic"
            android:layout_below="@id/timestamp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/companyField"
                android:layout_toEndOf="@id/companyText"
                android:layout_below="@id/timestamp"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="SAMPLE"/>

        <TextView
                android:text="@string/data_list_from_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromText"
                android:textStyle="italic"
                android:layout_below="@id/companyText"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromField"
                android:layout_toEndOf="@id/fromText"
                android:layout_below="@id/companyText"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="SAMPLE FROM"/>

        <TextView
                android:text="@string/data_list_to_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toText"
                android:textStyle="italic"
                android:layout_below="@id/fromText"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toField"
                android:layout_toEndOf="@id/toText"
                android:layout_below="@id/fromText"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="SAMPLE FOR"/>






    </RelativeLayout>



</android.support.v7.widget.CardView>
